hphp/test/zend/good/tests/classes/autoload/autoload_020.php
<?hh
<<__EntryPoint>> function autoload_020(): void {
var_dump(unserialize('O:1:"C":0:{}'));
}
