hphp/test/zend/bad/bug51827.php
<?php


function abc() {
	var_dump(1);
}

register_shutdown_function('timE');
register_shutdown_function('ABC');
register_shutdown_function('exploDe');

?>